# powd

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  openclaw.nix
.github/workflows/: ci.yml  release-macos-asset.yml  release-windows-asset.yml
docs/: README.md  agentmine-101-hermes-openclaw.en.md  powd-identity.en.md  powd-identity.zh.md  powd-local-api.en.md  powd-local-api.zh.md  powd-openclaw-integration.en.md  powd-openclaw-integration.zh.md  powd-positioning.en.md  powd-positioning.zh.md  stc-mint-agent-identity.zh.md  stc-mint-agent-local-api.en.md  stc-mint-agent-local-api.zh.md  stc-mint-agent-openclaw-integration.en.md  stc-mint-agent-openclaw-integration.zh.md  stc-mint-agent-positioning.zh.md
plugins/openclaw-powd/: README.md  index.js  openclaw.plugin.json  package.json
plugins/openclaw-powd/src/: archive.js  cli.js  config.js  constants.js  daemon.js  download.js  format.js  install.js  platform.js  releases.js  status.js
plugins/openclaw-powd/test/: config.test.js  install.test.js  platform.test.js  releases.test.js
scripts/: bump.sh  clawhub-release.sh  httpd.mjs  mcp-smoke.sh  openclaw-smoke.sh  pack-plugin-release.sh  pack-release.mjs  pack-release.sh  plugin-smoke.mjs  plugin-smoke.sh  release.sh
src/: lib.rs  types.rs
src/agent/: auto_mode.rs  cli.rs  client.rs  command.rs  config.rs  dashboard.rs  mcp.rs  mod.rs  render.rs  reward.rs  rpc.rs  state.rs  transport.rs  wallet.rs  wallet_support.rs
src/control/: app.rs  app_support.rs  cli.rs  cli_output.rs  client.rs  config.rs  dashboard.rs  mcp.rs  mod.rs  rpc.rs  state.rs
src/miner/: api.rs  mod.rs  runtime.rs  runtime_support.rs  schema.rs  solver.rs  state.rs
src/mining/: job.rs  mod.rs  pow.rs
src/protocol/: codec.rs  mod.rs  stratum_rpc.rs
src/stratum/: client.rs
tests/: agent_cli.rs  agent_mcp.rs  agent_rpc.rs  control_cli.rs  control_mcp.rs  control_plane.rs  e2e.rs
tests/support/: agent_process.rs  agent_rpc.rs  control_plane.rs  fake_pool.rs  fake_reward_api.rs  mock_rpc.rs  mod.rs  process.rs  process_cli.rs  process_mcp.rs  process_rpc.rs
